# untangled-conditionals-kata

./: .travis.yml  LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/include/: Config.h  Emailer.h  Logger.h  Pipeline.h  Project.h  TestStatus.h
cpp/src/: Pipeline.cpp
cpp/test/: CapturingEmailer.h  CapturingLogger.h  PipelineTest.cpp  main.cpp
csharp/: .gitignore  UntangledConditionals.sln
csharp/UntangledConditionals/: Pipeline.cs  Project.cs
csharp/UntangledConditionalsTest/: CapturingLogger.cs  PipelineTest.cs  UntangledConditionalsTest.csproj
go/: capturing_logger.go  emailer.go  pipeline.go  pipeline_test.go  project.go  test_status.go
go/src/: Config.go  Emailer.go  Logger.go  Pipeline.go  Pipeline_test.go  Project.go  TestStatus.go  config.go  pipeline.go  pipeline_test.go  project.go  test_status.go
java/: .gitignore  build.gradle  pom.xml
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/: Pipeline.java
java/src/test/java/: PipelineTest.java  (+1 more)
php/: .gitignore  composer.json
php/src/: Pipeline.php
php/src/Dependencies/: CapturingLogger.php  Config.php  Emailer.php  Logger.php  Project.php  ProjectBuilder.php  TestStatus.php
php/tests/: PipelineTest.php
python/: capturing_logger.py  pipeline.py  project.py  status.py  test_pipeline.py
typescript/: .gitignore  babel.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: Pipeline.ts
typescript/src/dependencies/: Config.ts  Logger.ts  Mailer.ts  Project.ts  TestStatus.ts
typescript/test/: CapturingLogger.ts  Pipeline.test.ts
(+5 files in other folders)
